--- a/PocoParts/res/xml/preferences_poco_parts.xml
+++ b/PocoParts/res/xml/preferences_poco_parts.xml
@@ -29,14 +29,7 @@
                 android:targetPackage="org.lineageos.settings"
                 android:targetClass="org.lineageos.settings.touchsampling.TouchSamplingSettingsActivity" />
         </Preference>
-
-     <SwitchPreference
-        android:key="fps_info"
-        android:icon="@drawable/ic_fps_info"
-        android:title="@string/fps_info_title"
-        android:summary="@string/fps_info_summary"
-        android:persistent="true" />
-
+    
         <Preference
             android:key="device_doze"
             android:persistent="false"
@@ -50,6 +43,47 @@
         </Preference>
 
     </PreferenceCategory>
+
+
+     <PreferenceCategory
+        android:key="fps"
+        android:title="fps info">
+
+     <SwitchPreference
+        android:key="fps_info"
+        android:icon="@drawable/ic_fps_info"
+        android:title="@string/fps_info_title"
+        android:summary="@string/fps_info_summary"
+        android:persistent="true" />
+
+     <ListPreference
+            android:key="fps_info_position"
+            android:defaultValue="0"
+            android:icon="@drawable/ic_fps_position"
+            android:title="@string/fps_info_position_title"
+            android:summary="%s"
+            android:entries="@array/fps_info_position_entries"
+            android:entryValues="@array/fps_info_position_values" />
+
+        <ListPreference
+            android:key="fps_info_color"
+            android:defaultValue="0"
+            android:icon="@drawable/ic_fps_color"
+            android:title="@string/fps_info_color_title"
+            android:summary="%s"
+            android:entries="@array/fps_info_color_entries"
+            android:entryValues="@array/fps_info_color_values" />
+
+        <com.xiaomi.parts.preferences.ProperSeekBarPreference
+            android:key="fps_info_text_size"
+            android:icon="@drawable/ic_fps_text"
+            android:title="@string/fps_info_text_size_title"
+            android:persistent="true"
+            android:max="5"
+            android:min="1"
+            settings:units=""
+            android:defaultValue="3" />
+        </PreferenceCategory>
 
     <PreferenceCategory
         android:key="audio"
